--- a/Emotion.Web/wwwroot/index.html
+++ b/Emotion.Web/wwwroot/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <body>
-    <div id="app">
-        <div id="loadingText">
-            <div>Loading</div>
-            <div class="center">
-                <div data-title=".dot-gathering">
-                    <div class="dot-gathering"></div>
-                </div>
+<div id="app">
+    <div id="loadingText">
+        <div>Loading</div>
+        <div class="center">
+            <div class="dot-parent">
+                <div class="dot-pseudo"></div>
+                <div class="dot-gathering"></div>
+
             </div>
         </div>
     </div>
+</div>
 <link rel="stylesheet" href="style.css">
 <script src="_framework/blazor.webassembly.js"></script>
 <script src="emotion.js"></script>
