--- a/Emotion.ExecTest/wwwroot/index.html
+++ b/Emotion.ExecTest/wwwroot/index.html
@@ -9,19 +9,20 @@
 </head>
 
 <body>
-<div id="app">
-    <div id="loadingText">
-        <div class="center">
-            <div class="dot-parent">
-                <div class="dot-pseudo"></div>
-                <div class="dot-gathering"></div>
+    <div id="app">
+        <div id="loadingText">
+            <div class="center">
+                <div class="dot-parent">
+                    <div class="dot-pseudo"></div>
+                    <div class="dot-gathering"></div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<link rel="stylesheet" href="style.css">
-<script src="_framework/blazor.webassembly.js"></script>
-<script src="emotion.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="/_framework/aspnetcore-browser-refresh.js"></script>
+    <script src="emotion.js"></script>
 </body>
 
 </html>
